k8s/ingress/reactive-movie-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactive-movie-ingress
  namespace: reactive-movie-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite: /api/(.*)/$1
spec:
  rules:
  - http:
      paths:
        - path: /api
          pathType: ImplementationSpecific
          backend:
            service:
              name: reactive-movie-service
              port:
                number: 8080
